# voicestick

./: .gitignore  README.md
.github/workflows/: deploy-website.yml  release.yml  transport-tests.yml
desktop/: Package.swift  README.md
desktop/Config/: config.example.toml
desktop/Resources/: AppIcon.icns
desktop/Sources/CZlib/: module.modulemap
desktop/Sources/VoiceStickApp/: AppConfig.swift  AppDelegate.swift  BleCentral.swift  BleProtocol.swift  DebugAudioRecorder.swift  FirmwareUpdateWindowController.swift  Info.plist  InputInjector.swift  OnboardingWindowController.swift  OverlayController.swift  PairDeviceWindowController.swift  SettingsWindowController.swift  StatusController.swift  VoiceStickCoordinator.swift
desktop/linux/: README.md
desktop/macos/: Package.resolved  Package.swift
desktop/macos/Config/: config.example.toml
desktop/macos/Resources/: AppIcon.icns
desktop/macos/Sources/VoiceStickApp/: AppConfig.swift  AppDelegate.swift  BleCentral.swift  BleProtocol.swift  DebugAudioRecorder.swift  FirmwareManifest.swift  Info.plist  InputInjector.swift  LLMTranslationClient.swift  OggCRC.swift  OggOpusMuxer.swift  OnboardingWindowController.swift  OverlayController.swift  PairDeviceWindowController.swift  SettingsWindowController.swift  SideButtonSendState.swift  StatusController.swift  SubtitleController.swift  VoiceStickCoordinator.swift  VolcengineASRClient.swift
desktop/macos/Tests/ProtocolSelfTest/: main.swift
desktop/macos/Tests/SideButtonSendStateSelfTest/: main.swift
desktop/windows/: CMakeLists.txt
desktop/windows/src/: app_config.cc  app_config.h  asr_client_win.cc  asr_client_win.h  asr_protocol.cc  asr_protocol.h  ble_central_win.cc  ble_central_win.h  ble_protocol.cc  ble_protocol.h  firmware_manifest.cc  llm_translation_client.cc  llm_translation_client.h  main.cc  onboarding_dialog.cc  onboarding_dialog.h  overlay_window.cc  overlay_window.h  pair_device_dialog.cc  settings_dialog.cc  settings_dialog.h  subtitle_window.cc  subtitle_window.h  voice_stick_coordinator.cc  voice_stick_coordinator.h  win32_app.cc  win32_app.h
desktop/windows/tests/: core_tests.cc
docs/: hardware-benchmark-2026-07-22.md  protocol.md  refactor-audit-2026-07-22.md  release.md  volcengine-asr.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/audio_feedback/: CMakeLists.txt  audio_feedback.c  idf_component.yml
firmware/components/audio_feedback/include/: audio_feedback.h
firmware/components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c  idf_component.yml
firmware/components/audio_pipeline/include/: audio_pipeline.h
firmware/components/audio_transport/: CMakeLists.txt  audio_transport.c
firmware/components/audio_transport/include/: audio_transport.h
firmware/components/audio_transport/test/: test_audio_transport.c
firmware/components/stick_s3_board/: CMakeLists.txt  bmi270_config.inc  stick_s3_board.c  stick_s3_imu.c
firmware/components/stick_s3_board/include/: stick_s3_board.h
firmware/components/ui_status/: CMakeLists.txt  ui_status.c  ui_status_icons.c  ui_status_icons.h
firmware/components/ui_status/include/: ui_status.h
firmware/components/voice_ble/: CMakeLists.txt  voice_ble.c
firmware/components/voice_ble/include/: voice_ble.h
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
scripts/: build-macos.sh  make-dmg.sh  png_to_lvgl_argb_bin.py  slice_cat_sprites.py  test-transport.sh  tune_cat_sprites.py  update-appcast.py
website/: README.md  index.html  package-lock.json  package.json  vite.config.js
website/public/: appcast.xml
website/src/: App.vue  main.js
website/src/assets/styles/: main.css
website/src/i18n/: en-US.json  index.js  zh-CN.json
